# kani-ext-realtime

./: LICENSE  README.md  pyproject.toml  requirements.txt  test.py
docs/: api_reference.rst  client_events.rst  conf.py  index.rst  server_events.rst
kani/ext/realtime/: __init__.py  _internal.py  audio.py  cli.py  engine.py  errors.py  interop.py  models.py  session.py  utils.py
kani/ext/realtime/events/: __init__.py  base.py  client.py  server.py
sandbox/: function_calling.py  mic_echo.py  test.py  test2.py
