[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kani-ext-realtime"
version = "0.0.1"
authors = [
    { name = "Andrew Zhu", email = "andrew@zhu.codes" },
]
description = "YOUR DESCRIPTION HERE"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    # https://pypi.org/classifiers/
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.20.0,<1.0.0",
    "kani>=1.2.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/zhudotexe/kani-ext-realtime"
"Bug Tracker" = "https://github.com/zhudotexe/kani-ext-vllm/realtime"

# This tells the build system that the kani directory contains a namespace package
# Don't touch it unless you know what you're doing!
[tool.hatch.build.targets.wheel]
packages = ["kani"]

[tool.black]
line-length = 120
preview = true
unstable = true

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 120
known_first_party = ["kani"]
no_lines_before = "LOCALFOLDER"
reverse_relative = true
combine_as_imports = true
